test/classes/errors/nilability-assign/assign-oknil-shared-from-nonnil-borrowed.good
assign-oknil-shared-from-nonnil-borrowed.chpl:8: error: Cannot assign to shared MyClass? from borrowed MyClass
